Jun 10 2026 changes
GitOrigin-RevId: 0ba1b6dda2a98b37c85944dc0fb2c9a844c9130c